--- a/views/intro.haml
+++ b/views/intro.haml
@@ -1,5 +1,8 @@
 .vcenter
-  %h1
-    Move Fast
-  %h2
-    A guide to navigating your environment, efficiently.
+  %h1 Move Fast
+  %h2 A guide to navigating your environment, efficiently.
+  %h3 Richard
+  %h3 github: radavis
+  %h3 twitter: @theebeastmaster
+  %h3 linkedin: /in/davisra
+
