--- a/views/outro.haml
+++ b/views/outro.haml
@@ -1,1 +1,7 @@
-%h2 Remember: Your mouse is evil and trying to steal away your productivity!
+%h2 Remember:
+
+%blockquote
+  %p
+    The mouse is evil and trying to steal your precious time.
+  %p
+    %cite Richard
