--- a/views/osx.haml
+++ b/views/osx.haml
@@ -1,9 +1,15 @@
 %h2 Navigating OSX
 
 %ul
-  %li Spotlight
-  %li Switching windows
+  %li Spotlight &#8984; &#9251;
+  %li Switching windows &#8984; &#8677;
   %li Launching Applications (Alfred, Quicksilver)
   %ul
-    %li Setting up custom keybindings
+    %li Terminal &#8963; &#8997; &#8984; T
+    %li Editor &#8963; &#8997; &#8984; E
+    %li Browser &#8963; &#8997; &#8984; B
   %li Moving windows (SizeUp)
+  %ul
+    %li Full Screen &#8963; &#8997; &#8984; &crarr;
+    %li Left Half &#8963; &#8997; &#8984; &larr;
+    %li Right Half &#8963; &#8997; &#8984; &rarr;
