--- a/views/editor.haml
+++ b/views/editor.haml
@@ -3,7 +3,7 @@
 %h2 Editors: Sublime Text, Atom
 
 %ul
-  %li.anim-show.slide Launching
+  %li Launching
   %ul
     %li From Keyboard
   %li Creating a new file
