--- a/views/move_fast.erb
+++ b/views/move_fast.erb
@@ -19,6 +19,7 @@
 
   <!-- Style theme. More available in /themes/style/ or create your own. -->
   <link rel="stylesheet" media="screen" href="/themes/style/web-2.0.css">
+  <link rel="stylesheet" media="screen" href="/main.css">
 
   <!-- Transition theme. More available in /themes/transition/ or create your own. -->
   <link rel="stylesheet" media="screen" href="/themes/transition/horizontal-slide.css">
