--- a/views/editor.haml
+++ b/views/editor.haml
@@ -1,15 +1,43 @@
 %h2 Navigating Your Editor
 
-%h2 Editors: Sublime Text, Atom
+%h2 Editors: Sublime Text, Atom (possibly)
 
 %ul
   %li Launching
   %ul
-    %li From Keyboard
-  %li Creating a new file
-  %li Navigating to a file
-  %li Installing Packages
-  %li Splitting Panes
+    %li
+      From Keyboard
+      .key-combo &#8963; &#8997; &#8984; E
+    %li
+      From Terminal:
+      %pre.inline subl .
+
+  %li
+    Creating a new file
+    .key-combo &#8984; N
+  %li
+    Navigating to a file
+    .key-combo &#8984; P
+    .key-combo &#8984; T
+  %li
+    Installing Packages
+    .key-combo &#8679; &#8984; P
+  %li
+    Splitting Panes
+    .key-combo &#8997; &#8984; 2
+
   %li Finding things
-  %li Find and replace
-  %li Renaming/moving things
+  %ul
+    %li
+      In a file
+      .key-combo &#8984; F
+    %li
+      Find and replace
+      .key-combo &#8997; &#8984; F
+    %li
+      Find in all files in project
+      .key-combo &#8679; &#8984; F
+
+  %li
+    Renaming/moving things (AdvancedNewFile)
+    .key-combo &#8997; &#8984; N
