--- a/views/terminal.haml
+++ b/views/terminal.haml
@@ -1,5 +1,9 @@
 %h2 Navigating Your Terminal
 
 %ul
-  %li tab completion
-  %li opening things
+  %li
+    .key-combo &#8677;
+    completion
+  %li
+    %pre.inline open
+    ing things
