--- a/views/move_fast.erb
+++ b/views/move_fast.erb
@@ -97,6 +97,7 @@
 <!-- Initialize the deck. You can put this in an external file if desired. -->
 <script>
   $(function() {
+    $('li').addClass("slide");
     $.deck('.slide');
   });
 </script>
