--- a/views/editor.haml
+++ b/views/editor.haml
@@ -25,6 +25,8 @@
   %li
     Splitting Panes
     .key-combo &#8997; &#8984; 2
+    .key-combo &#8997; &#8984; 3
+    .key-combo &#8997; &#8984; number_of_panes
 
   %li Finding things
   %ul
