--- a/views/intro.haml
+++ b/views/intro.haml
@@ -1,7 +1,4 @@
 .vcenter
   %h1 Move Fast
   %h2 A guide to navigating your environment, efficiently.
-  %h3 github: radavis
-  %h3 twitter: @theebeastmaster
-  %h3 linkedin: /in/davisra
-
+  = haml :contact
