--- a/views/primer.haml
+++ b/views/primer.haml
@@ -14,9 +14,37 @@
     .key-combo &#8963;
 
   %li
+    Shift
+    .key-combo &#8679;
+
+  %li
     Return (or Enter)
     .key-combo &crarr;
 
   %li
     Tab
     .key-combo &#8677
+
+
+%p "Universal" Shortcuts
+
+%ul
+  %li
+    Open
+    .key-combo &#8984; O
+
+  %li
+    Save
+    .key-combo &#8984; S
+
+  %li
+    Save As
+    .key-combo &#8679; &#8984; S
+
+  %li
+    New File
+    .key-combo &#8984; N
+
+  %li
+    New Tab
+    .key-combo &#8984; T
