--- a/views/slides/three_table_erd.haml
+++ b/views/slides/three_table_erd.haml
@@ -1,4 +1,4 @@
-%h2 Three-Table Database
+%h2 Normalized Database
 
 %h3 ERD
 
@@ -25,7 +25,6 @@
       %tr
         %td image
 
-.erd
   %table.erd
     %thead
       %tr
@@ -36,7 +35,6 @@
       %tr
         %td name
 
-.erd
   %table.erd
     %thead
       %tr
