--- a/views/slides/two_table_data.haml
+++ b/views/slides/two_table_data.haml
@@ -2,7 +2,7 @@
 
 %h3 Songs Data
 
-%table.flat_db
+%table.data
   %thead
     %tr
       %th id
@@ -26,7 +26,7 @@
 
 %h3 Artists Data
 
-%table.flat_db
+%table.data
   %thead
     %tr
       %th id
