--- a/views/slides/three_table_data.haml
+++ b/views/slides/three_table_data.haml
@@ -1,8 +1,8 @@
-%h2 Three-Table Database
+%h2 Normalized Database
 
 %h3 Songs Data
 
-%table.flat_db
+%table.data
   %thead
     %tr
       %th id
@@ -24,7 +24,7 @@
 
 %h3 Artists Data
 
-%table.flat_db
+%table.data
   %thead
     %tr
       %th id
@@ -38,7 +38,7 @@
 
 %h3 Albums Data
 
-%table.flat_db
+%table.data
   %thead
     %tr
       %th id
