database persistence slides

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,9 @@
-<h2>Slides</h2>
+<section class="slide">
+  <h2>Slides</h2>
 
-<ul>
-  <li><a href="/http">HTTP</a></li>
-  <li><a href="/database-relationships">Database Relationships</a></li>
-</ul>
+  <ul>
+    <li><a href="/http">HTTP</a></li>
+    <li><a href="/database-persistence">Database Persistence</a></li>
+    <li><a href="/database-relationships">Database Relationships</a></li>
+  </ul>
+</section>
