add rails routes slides

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,5 +7,6 @@
     <li><a href="/database-persistence">Database Persistence</a></li>
     <li><a href="/database-relationships">Database Relationships</a></li>
     <li><a href="/intro-to-oop">Introduction to Object-Oriented Programming</a></li>
+    <li><a href="/nested-routes">Nested Routes</a></li>
   </ul>
 </section>
