reorg acceptance testing

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,7 @@
   <ul>
     <li><a href="/http">HTTP</a></li>
     <li><a href="/http-post">HTTP POST</a></li>
+    <li><a href="/acceptance-testing">Acceptance Testing</a></li>
     <li><a href="/database-persistence">Database Persistence</a></li>
     <li><a href="/database-relationships">Database Relationships</a></li>
     <li><a href="/intro-to-oop">Introduction to Object-Oriented Programming</a></li>
